<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SalesWindow</class>
 <widget class="QMainWindow" name="SalesWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_6">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
         <widget class="QLabel" name="table_caption_lb">
          <property name="text">
           <string>Table caption</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer_4">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
           <string>From :</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QDateEdit" name="from_de">
          <property name="displayFormat">
           <string>MMM dd, yyyy</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_3">
          <property name="text">
           <string>To :</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QDateEdit" name="to_de">
          <property name="displayFormat">
           <string>MMM dd, yyyy</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <widget class="QTableWidget" name="sales_tw">
        <property name="verticalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOn</enum>
        </property>
        <property name="editTriggers">
         <set>QAbstractItemView::NoEditTriggers</set>
        </property>
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectRows</enum>
        </property>
        <property name="showGrid">
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
         <widget class="QPushButton" name="home_pb">
          <property name="text">
           <string>&lt;&lt; Home</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pg_up_pb">
          <property name="text">
           <string>&lt; Pg Up</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pg_down_pb">
          <property name="text">
           <string>Pg Down &gt;</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="end_pb">
          <property name="text">
           <string>End &gt;&gt;</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer_5">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
       </layout>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>28</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
